minio/minio-ui-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-ui
  namespace: minio-tenant
spec:
  parentRefs:
    - name: cilium-gw
      namespace: default
      port: 80
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /minio
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: :path
                value: /
      backendRefs:
        - name: myminio-console
          port: 9090
